# cpp_video_editing

./: CMakeLists.txt  README.md
src/: main.cpp
